correct scrollbar style for none-apple mouse

--- a/client/src/containers/AppContainer/AppContainer.scss
+++ b/client/src/containers/AppContainer/AppContainer.scss
@@ -1,14 +1,20 @@
 .breadcrumb_wrapper {
-  //position: fixed;
   z-index: 100;
   background: #272727;
-  //max-width: 100% !important;
 }
 
 .block {
+  overflow-y: scroll;
+  overflow-x: hidden;
   display: flex;
   height: calc(100% - 100px);
-  overflow: scroll;
   padding: 0 30px;
   //width: 90%;
+  transition: 2s ease;
+
+  background: #0000001c;
+  //margin: 20px 50px 0;
+
+  //to leave space for arrows
+  width: 90%;
 }
