--- a/client/src/scss/3d.scss
+++ b/client/src/scss/3d.scss
@@ -18,16 +18,6 @@
       z-index: 2020;
       transform-style: preserve-3d;
       overflow: visible !important;
-      .AppContainer__block {
-        transition: 2s ease;
-        height: calc(100% - 100px);
-        overflow: scroll;
-        background: #0000001c;
-        //margin: 20px 50px 0;
-        padding: 0 30px;
-        //to leave space for arrows
-        width: 90%;
-      }
     }
     .sidebar, .aside-menu {
       border: none;
